--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Test task</title>
+     <script src="/js/jquery-3.3.1.min.js"></script>
+     <script src="/js/list_upload.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
     <h1>List of graphs</h1>
-    <form action="http://127.0.0.1:2016/graph_drawing/" method="get">
-        <select id = graph_select>
-            {% for graph in graphs %}
-            <option value = graph.uuid>{{graph.name, graph.timestamp}}
-            </option>
-            {% endfor %}
-        </select>
-        <p><input type="submit" value=$( "#graph_select" ).val() ></p>
-    </form>
+    <div id = graphs_list>
 
+    </div>
+        <canvas width="960" height="600"></canvas>
+        <script src="/js/graph_draw.js">></script>
 </body>
 </html>
