--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Test task</title>
-     <script src="/js/jquery-3.3.1.min.js"></script>
-     <script src="/js/list_upload.js"></script>
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/list_upload.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
     <h1>List of graphs</h1>
-    <div id = graphs_list>
-
-    </div>
+    <div id = graphs_list></div>
         <canvas width="960" height="600"></canvas>
-        <script src="/js/graph_draw.js">></script>
+        <script src="/js/graph_draw.js"></script>
 </body>
 </html>
